# rust-fetcher

./: .gitignore  AGENTS.md  Cargo.toml  README.md  config.yaml.example
.github/workflows/: ci.yml  release.yml
assets/js/: dy_ab.js  sign.js
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  constants.rs  cookies.rs  error.rs  export.rs  fs.rs  http.rs  ids.rs  js.rs  lib.rs  logging.rs  utils.rs
crates/common/tests/: config.rs  config_roundtrip.rs  export_csv.rs  ids.rs  js_runtime.rs
crates/desktop/: Cargo.toml  Dioxus.toml
crates/desktop/assets/: custom-themes.css  dx-components-theme.css  views.css
crates/desktop/bundler/windows/: installer.nsi  installer.wxs
crates/desktop/locales/: en-US.ftl  zh-CN.ftl
crates/desktop/src/: controller.rs  lib.rs  main.rs  router.rs  state.rs
crates/desktop/src/components/: mod.rs
crates/desktop/src/components/sidebar/: component.rs  style.css
crates/desktop/src/hooks/: mod.rs
crates/desktop/src/layouts/: app_layout.rs  mod.rs
crates/desktop/src/views/: im.rs  live.rs  mod.rs  settings.rs
crates/desktop/src/widgets/: mod.rs
crates/desktop/tests/: controller.rs  state.rs
crates/im/: Cargo.toml  build.rs
crates/im/proto/: Request.proto  Response.proto
crates/im/src/: bulk.rs  client.rs  error.rs  lib.rs  models.rs  proto.rs  request_builder.rs  request_template.b64  request_template.rs  response.rs  signer.rs  transport.rs
crates/im/tests/: request_builder.rs  request_template.rs  response.rs
crates/live/: Cargo.toml  build.rs
crates/live/proto/: douyin.proto
crates/live/src/: app.rs  config.rs  constants.rs  error.rs  export.rs  js_engine.rs  lib.rs  proto.rs
crates/live/src/fetcher/: bootstrap.rs  bootstrap_test.rs  connection.rs  connection_test.rs  message.rs  mod.rs  room.rs  session.rs  websocket.rs
crates/live/src/signature/: ac.rs  mod.rs  websocket.rs
crates/service/: Cargo.toml
crates/service/src/: app_paths.rs  commands.rs  config.rs  config_store.rs  event.rs  im_runtime.rs  lib.rs  live_runtime.rs  open.rs  service.rs
crates/service/tests/: commands.rs  config_store.rs  im_runtime.rs  live_runtime.rs  open.rs
doc/readme/: README_zh.md
xtask/: Cargo.toml
xtask/src/: main.rs
