[workspace]
members = ["crates/live", "crates/cli", "crates/im", "crates/common", "crates/service", "crates/desktop", "xtask"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["onenewcode <lspneverstudy@gmail.com>"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[workspace.dependencies]
anyhow = "1.0"
base64 = "0.22"
flate2 = "1.1"
csv = "1.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
md5 = "0.8"
prost = "0.14"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["cookies", "rustls-tls"] }
rquickjs = { version = "0.10", features = ["macro"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.45", features = ["macros", "rt-multi-thread", "time", "fs", "net", "io-util", "sync"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
thiserror = "2.0"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "registry", "std", "ansi"] }
url = "2.5"
uuid = { version = "1.0", features = ["v4"] }
prost-build = "0.14"
protoc-bin-vendored = "3.2"
clap = { version = "4.5", features = ["derive"] }
live = { path = "crates/live" }
cli = { path = "crates/cli" }
im = { path = "crates/im" }
common = { path = "crates/common" }
service = { path = "crates/service" }
rfd = "0.15"
