[package]
name = "common"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
csv.workspace = true
rquickjs.workspace = true
reqwest.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile = "3"
tokio.workspace = true
