[package]
name = "desktop"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
dioxus = { version = "0.7", features = ["desktop", "router"] }
dioxus-i18n = "0.5"
unic-langid = { version = "0.9", features = ["macros"] }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false }
common.workspace = true
service.workspace = true
rfd = "0.15"
tokio.workspace = true
tracing.workspace = true
[dev-dependencies]
tempfile = "3.20"

