[package]
name = "im"
version.workspace = true
edition.workspace = true
authors.workspace = true
build = "build.rs"

[dependencies]
common.workspace = true
csv.workspace = true
anyhow.workspace = true
base64.workspace = true
prost.workspace = true
reqwest.workspace = true
rquickjs.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
url.workspace = true
rand.workspace = true

[build-dependencies]
prost-build.workspace = true
protoc-bin-vendored.workspace = true
