[package]
name = "live"
version.workspace = true
edition.workspace = true
build = "build.rs"

[dependencies]
common.workspace = true
csv.workspace = true
anyhow.workspace = true
flate2.workspace = true
futures-util.workspace = true
md5.workspace = true
prost.workspace = true
rand.workspace = true
reqwest.workspace = true
rquickjs.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
thiserror.workspace = true
tracing.workspace = true

[build-dependencies]
prost-build.workspace = true
protoc-bin-vendored.workspace = true
